--- a/openapi/swagger-initializer.tmpl
+++ b/openapi/swagger-initializer.tmpl
@@ -1,6 +1,6 @@
 window.onload = function () {
   window.ui = SwaggerUIBundle({
-    urls: [{{range $url, $schema := .}}{ name: "{{ $schema.Name }}", url: "{{ $url }}" },{{end}}],
+    urls: [{{range $url, $name := .}}{ name: "{{ $name }}", url: "{{ $url }}" },{{end}}],
     dom_id: "#swagger-ui",
     deepLinking: true,
     presets: [SwaggerUIBundle.presets.apis, SwaggerUIStandalonePreset],
